Changes in version: JMbayes_0.8-3

  * added function mvglmer() for fitting multivariate mixed models using JAGS.
  * added function mvJointModelBayes() for fitting multivariate joint models.

---------------------------------------

Changes in version: JMbayes_0.8-1

  * shiny app for dynamic predictions from mixed models.

---------------------------------------

Changes in version: JMbayes_0.8-0

  * package version for JSS paper v72i07.

---------------------------------------

Changes in version: JMbayes_0.7-9

  * aucJM() and prederrJM() now work with left truncated data.

---------------------------------------

Changes in version: JMbayes_0.7-8

  * support the use of offset().

---------------------------------------

Changes in version: JMbayes_0.7-6

  * resolve small bugs in summary.JMbayes().

---------------------------------------

Changes in version: JMbayes_0.7-5

  * resolve imports from other packages in NAMESPACE.

---------------------------------------

Changes in version: JMbayes_0.7-2

  * jointModelBayes() can now accept Cox models with left-truncation.

---------------------------------------

Changes in version: JMbayes_0.7-0

  * New function rocJM() calculates dynamic sensitivity and specificity and the plot produce the ROC curve plot.
  * The new function cvDCL() calculates an estimate of the dynamic cross-entropy.
  * The new function dynInfo() calculates the dynamic Kullaback-Leibler information provided by an extra longitudinal measurement.
  * Function jointModelBayes() can now handle survival submodels with exogenous time-varying covariates.
  * The MCMC algorithm implements now hierarchical centering for the parameters of mixed effects model.
  * Several improvements in the shiny web app for calculating dynamic predictions.

---------------------------------------

Changes in version: JMbayes_0.6-1

  * Impovements for estimating the weight function.
  * Faster implementation of the MCMC.