@@ -3,3 +3,6 @@
 .RData
 *.history
 .gz
+src/*.o
+src/*.so
+src/*.dll
