@@ -49,6 +49,7 @@ S3method(fixef, JMbayes)
 S3method(fixef, mvglmer)
 S3method(fixef, mvJMbayes)
 S3method(fitted, JMbayes)
+S3method(fitted, mvJMbayes)
 S3method(logLik, JMbayes)
 S3method(makepredictcall, dbs)
 S3method(makepredictcall, dns)
@@ -70,6 +71,7 @@ S3method(print, summary.mvJMbayes)
 S3method(print, summary.mvglmer)
 S3method(print, survfit.JMbayes)
 S3method(ranef, JMbayes)
+S3method(ranef, mvJMbayes)
 S3method(residuals, JMbayes)
 S3method(rocJM, JMbayes)
 S3method(summary, JMbayes)
