@@ -193,3 +193,45 @@ fixef.mvJMbayes <- function (object, process = c("Longitudinal", "Event"), ...) 
           object$statistics$postMeans$alphas)
     }
 }
+
+ranef.mvJMbayes <- function (object, as_list = FALSE, ...) {
+    if (!inherits(object, "mvJMbayes"))
+        stop("Use only with 'mvJMbayes' objects.\n")
+    out <- object$statistics$postMeans$b
+    dimnames(out) <- list(names(object$model_info$coxph_components$Time), 
+                          colnames(object$statistics$postMeans$D))
+    if (as_list) {
+        components <- object$model_info$mvglmer_components
+        ncols <- components[grep("ncz", names(components), fixed = TRUE)]
+        RE_inds <- object$model_info$RE_inds
+        out <- lapply(RE_inds, function (i) out[, i, drop = FALSE])
+    }
+    out
+}
+
+fitted.mvJMbayes <- function (object, process = c("Longitudinal", "longitudinal", "Event", 
+                                                  "event"), 
+                              type = c("Marginal", "marginal", "Subject", "subject"), ...) {
+    if (!inherits(object, "mvJMbayes")) 
+        stop("Use only with 'mvJMbayes' objects.\n")
+    process <- match.arg(process)
+    type <- match.arg(type)
+    if (process == "Longitudinal" || process == "longitudinal") {
+        components <- object$model_info$mvglmer_components
+        families <- object$model_info$families
+        n_outcomes <- length(families)
+        seq_n_outcomes <- seq_len(n_outcomes)
+        X <- components[paste0("X", seq_n_outcomes)]
+        fitY <- mapply("%*%", X, fixef(object), SIMPLIFY = FALSE)
+        names(fitY) <- row.names(object$Data$data)
+        if (type == "Subject" || type == "subject") {
+            ids <- components[paste0("id", seq_n_outcomes)]
+            Zs <- components[paste0("Z", seq_n_outcomes)]
+            bs <- ranef(object, as_list = TRUE)
+            Zb_fun <- function (Z, b, id) rowSums(Z * b[id, , drop = FALSE])
+            Zbs <- mapply(Zb_fun, Zs, bs, ids, SIMPLIFY = FALSE)
+            fitY <- mapply("+", fitY, Zbs, SIMPLIFY = FALSE)
+        }
+        fitY
+    }
+}
