@@ -597,6 +597,8 @@ mvJointModelBayes <- function (mvglmerObject, coxphObject, timeVar,
                     timeVar = timeVar,
                     Formulas = Formulas,
                     Interactions = Interactions,
+                    RE_inds = RE_inds,
+                    RE_inds2 = RE_inds2,
                     mvglmer_components = components,
                     coxph_components = list(data = dataS, Terms = Terms, Time = Time, 
                                             event = event),
