@@ -17,8 +17,8 @@ provided.
 \tabular{ll}{
 Package: \tab JMbayes\cr
 Type: \tab Package\cr
-Version: \tab 0.8-55\cr
-Date: \tab 2016-11-11\cr
+Version: \tab 0.8-6\cr
+Date: \tab 2017-02-01\cr
 License: \tab GPL (>=2)\cr
 }
 
